clusters/kubenuc/apps/nut/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nut-exporter
  name: nut-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nut-exporter
  template:
    metadata:
      labels:
        app: nut-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9995"
        prometheus.io/path: /metrics
    spec:
      containers:
      - image: hon95/prometheus-nut-exporter:stable@sha256:0ed2a78084a627c2290a90b8fad3d7bcb62620d87dab941badd0eb4678119a48
        name: nut-exporter
        ports:
          - containerPort: 9995
        resources:
          requests:
            cpu: 5m
            memory: 8Mi
          limits:
            cpu: 10m
            memory: 16Mi
        imagePullPolicy: Always
        securityContext:
          runAsUser: 10001
          runAsGroup: 10001
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
            - all
          readOnlyRootFilesystem: true
      serviceAccount: nut-sa
      serviceAccountName: nut-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
